CDAP-14932. Salesforce Batch Source to fetch objects via SOQL. Widget and plugin